# ratatoskr

./: .env.example  .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  kafka-stack.yml  mqtt-stack.yml
.github/workflows/: rust.yml
docs/: examples.md  image_downloading.md  markdown_testing.md  message_support_status.md  testing_images.md  troubleshooting.md  unified_message_types.md
docs/types/: README.md  ratatoskr-types.ts
scripts/: README.md  com.sectorflabs.ratatoskr.plist  consume.sh  consume_unified.sh  demo_ollama_bot.sh  install-service-linux.sh  install-service-macos.sh  monitor_message_reactions.sh  produce.sh  produce_hide_keyboard.sh  produce_image.sh  produce_location_request.sh  produce_reply_keyboard.sh  produce_typing.sh  produce_typing_demo.sh  produce_typing_unified.sh  produce_unified.sh  produce_with_buttons.sh  produce_with_buttons_unified.sh  ratatoskr.service  ratatoskr.service.template  setup_env.sh  setup_env_unified.sh  simple_produce.sh  simulate_callback.sh  test_auto_buttons.sh  test_backward_compatibility.sh  test_both_brokers.sh  test_cafe_buttons.sh  test_direct_produce.sh  test_markdown.sh  test_markdown_edge_cases.sh  test_markdown_fallback.sh  test_message_reactions.sh  test_pipe_outbound.sh  test_simple_markdown.sh  validate_json.sh
src/: auth.rs  cli.rs  config.rs  incoming.rs  kafka_adapter.rs  kafka_processing.rs  lib.rs  main.rs  messaging.rs  mqtt_adapter.rs  outgoing.rs  structs.rs  telegram_handlers.rs  users.rs  utils.rs
src/broker/: kafka.rs  mod.rs  mqtt.rs  pipe.rs  user_pipes.rs
src/kafka_processing/: mod.rs  outgoing.rs  status_message.rs
src/telegram_handler/: incoming.rs  mod.rs
tests/: pipe_outbound_forwarding.rs
tests/data/: outgoing_text.json
