[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
teloxide = { version = "0.15", features = ["macros"] }
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
regex = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.13"
