[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2024"
authors = ["Divan Visagie <me@divanv.com>"]
description = "A lightweight Telegram bot bridge that streams updates over stdout and accepts responses via named pipes"
repository = "https://github.com/sector-f-labs/ratatoskr"
homepage = "https://github.com/sector-f-labs/ratatoskr"
documentation = "https://github.com/sector-f-labs/ratatoskr#readme"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["telegram", "bot", "bridge", "pipe", "messaging"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
teloxide = { version = "0.15", features = ["macros"] }
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
regex = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.13"
